--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 iProtect for Apache
-Covered under one or more copyrights and patents 
+Covered under one or more copyrights and patents
 1998-2001 Digital Concepts
 http://www.digital-concepts.net
 All rights reserved.
 
-VERSION 1.7
+VERSION 1.8.1
 
 INTRODUCTION
 ------------
@@ -37,7 +37,7 @@ Save a copy of your old httpd binary and conf file just in case.
 
 =Apache Recompile (Static):=
 
-To Install From Object File: If you have a precompiled object file 
+To Install From Object File: If you have a precompiled object file
 (i.e. mod_iprot.o) you have two choices.  You can either add the following 
 line to the Configuration.tmpl file in the root Apache source directory:
 Module iprot_module  modules/iprot/mod_iprot.o
@@ -68,6 +68,9 @@ and restart.
 This is the easy part.  If you have Apache compiled with mod_so, you can
 use the apxs utility from the Apache distribution to automatically compile
 and install mod_iprot.  A makefile is provided which does this.
+If you get and error that says "undefined symbol: dbm_fetch" then you will need
+to edit the Makefile and uncomment the line that reads "#LIB=-lgdbm". This mainly
+only applies to users of Redhat 7.1.
 
    cd (path to where mod_iprot.c is located)
    make install
@@ -76,7 +79,7 @@ and install mod_iprot.  A makefile is provided which does this.
 CONFIGURATION
 -----------------------------
 
-Add the following minimum set of configuration variables to your httpd.conf 
+Add the following minimum set of configuration variables to your httpd.conf
 in a global area (outside a virtualhost directive):
 
 <IfModule mod_iprot.c>
@@ -87,36 +90,36 @@ in a global area (outside a virtualhost directive):
    IProtCompareN 2
 </IfModule>
 
-These are merely suggested defaults. For "high traffic" sites, it is more 
+These are merely suggested defaults. For "high traffic" sites, it is more
 reasonable to start out with IProtThreshold at 30, and IProtCompareN at 3.
 
-Optional directives are described in further detail later in this document.  
+Optional directives are described in further detail later in this document.
 
 
 OPERATION
 ---------
 
   mod_iprot does not do much external logging during operation, to minimize
-the system load.  It will print a line to your Apache error_log if it detects 
-unauthorized access, and simulaneously send mail to the administrator of the 
-server to warn you of unauthorized access. 
+the system load.  It will print a line to your Apache error_log if it detects
+unauthorized access, and simulaneously send mail to the administrator of the
+server to warn you of unauthorized access.
   IProtect will block access to your authorized access areas for the Timeout
-period, but for safety and security purposes, does not modify your password 
-files.  If you think a password has been compromised, you should delete the 
-user or change the password yourself.  
-  It is normal to see a WARNING message in your Apache error log files  
+period, but for safety and security purposes, does not modify your password
+files.  If you think a password has been compromised, you should delete the
+user or change the password yourself.
+  It is normal to see a WARNING message in your Apache error log files
 'Resource temporarily unavailable' in regards to the iProtDBFile.
-This message is printed to the log file by Apache when the DB file is busy, 
-it is not a performance problem, or an error in any way.  It is normal to 
+This message is printed to the log file by Apache when the DB file is busy,
+it is not a performance problem, or an error in any way.  It is normal to
 see this on high traffic sites.
   If you need to clear out the database of blocked IPs, it is safe to delete
 the IProtDB file.  It will simply be recreated.  Restarting Apache is not
 necessary.
 
-  IProtect issues a 403 server error when it catches an unauthorized access 
-attempt. You can redirect this traffic with the use of an ErrorDocument 
+  IProtect issues a 403 server error when it catches an unauthorized access
+attempt. You can redirect this traffic with the use of an ErrorDocument
 directive.
-The directive is generally placed in a VirtualHosts directive or in the 
+The directive is generally placed in a VirtualHosts directive or in the
 .htaccess file (if supported)
 
 Example
@@ -129,14 +132,13 @@ HTTPD GLOBAL CONFIGURATION
 The following configuration variables are required in httpd.conf in a global
 location(outside a virtualhost directive)
 
-=IProtThreshold 
+=IProtThreshold
 
 IProtThreshold is the number of "hits" that are allowed before a username is
 prohibited from further access.   Set this to a reasonable number to allow for
 users with dynamic IP addresses and AOL proxies.
 
 Example:
-
 IProtThreshold 20
 
 =IProtAccessTimeout and IProtAuthTimeout
@@ -151,7 +153,6 @@ reasonably high to allow for AOL users who are coming through proxies (since
 they all look like the same host to mod_iprot).
 
 Example:
-
 IProtAccessTimeout 24  # 24 hours
 IProtAuthTimeout 300   # 5 minutes
 
@@ -159,12 +160,11 @@ IProtAuthTimeout 300   # 5 minutes
 
 IProtDBFile specifies the location of the temporary storage of IP addresses
 while the program is in operation.  The server must have write access to the
-directory.  Your htaccess file is still the master location for all usernames 
-and passwords.  An extension is automatically appended onto this file, 
+directory.  Your htaccess file is still the master location for all usernames
+and passwords.  An extension is automatically appended onto this file,
 depending on the type of DB support available on your system.
 
 Example:
-
 IProtDBFile /tmp/prot
 
 
@@ -175,7 +175,7 @@ the IP Address.  If you would like to ignore IP duplicates on the same
 subnet (127.12.123.*), then set IProtCompareN to 3.  Full restriction would
 be 4.  If any part of the IP is different, a hit will be registered.
 
-Example
+Example:
 IProtCompareN 2
 
 The following variables are optional in httpd.conf
@@ -183,23 +183,22 @@ The following variables are optional in httpd.conf
 ==IProtIgnoreUser (optional)
 
 IProtIgnoreUser is used to indicate one or more (or a range) usernames that are
-ignored when tracking incoming requests. Just enter user names, one per line, 
-and the module will ignore them. You can also enter simple regular expressions 
-(see the documentation for the mod_rewrite module for details on the format).  
-Notice that this used to be called IProtIgnore, but has changed.  
- 
-Example
+ignored when tracking incoming requests. Just enter user names, one per line,
+and the module will ignore them. You can also enter simple regular expressions
+(see the documentation for the mod_rewrite module for details on the format).
+Notice that this used to be called IProtIgnore, but has changed.
 
+Example:
 IProtIgnoreUser bob
 IProtIgnoreUser foo.*         (ignore anything beginning with foo)
 IProtIgnoreUser foo[0-9]*     (ignore foo with any number of trailing digits)
 
 ==IProtIgnoreIP (optional)
 
-IProtIgnoreIP is used to indicate one or more (or a range) of IPs to ignore 
-when tracking incoming requests.  Use it the same way as IProtIgnoreUser.  
-Notice that a backslash is necessary here, because the regex library uses 
-'.' to match "anything".  If you leave those out, you can get unexpected 
+IProtIgnoreIP is used to indicate one or more (or a range) of IPs to ignore
+when tracking incoming requests.  Use it the same way as IProtIgnoreUser.
+Notice that a backslash is necessary here, because the regex library uses
+'.' to match "anything".  If you leave those out, you can get unexpected
 results.
 
 Example:
@@ -209,47 +208,77 @@ IProtIgnoreIP 123\.12\.34\.[0-9]*  (ignore this range of IPs)
 ==IProtEmail (optional)
 
 IProtEmail <some valid internet email address>
-By default, iProtect will send its notification emails to whatever email is 
-specified for the ServerAdmin Directive for the virtualhost that has the 
-abuse/hacking, if no IprotEmail or ServerAdmin is used, iProtect will then 
+By default, iProtect will send its notification emails to whatever email is
+specified for the ServerAdmin Directive for the virtualhost that has the
+abuse/hacking, if no IprotEmail or ServerAdmin is used, iProtect will then
 try to send the notifications to the global ServerAdmin setting.  Use this
 to override the default email address.
 
+==IProtNotifyIP On/Off (optional)
+This is a flag that defaults to true. It is set to false (or 'Off'), the module
+will not send email notifications for hack attempts.
+
+Example:
+IProtNotifyIP Off
+
+
+==IProtNotifyUser On/Off (optional)
+This is a flag that defaults to true. It is set to false (or 'Off'), the module
+will not send email notifications for username abuse.
+
+Example:
+IProtNotifyUser Off
+
+
 ==IProtNag On/Off (optional)
 
-This is a flag that defaults to false.  If it is set to true (or 'On'), the 
-module will send a notification on _every_ detected authorization failure.  
+This is a flag that defaults to false.  If it is set to true (or 'On'), the
+module will send a notification on _every_ detected authorization failure.
 This is annoying, but can be useful for debugging.
 
 Example:
-
 IProtNag On
 
 ==IProtEnable On/Off (optional)
 
-This is a flag which defaults to true.  If you have a configuration where 
+This is a flag which defaults to true.  If you have a configuration where
 you are supporting IProtect with multiple virtual hosts, you can use this flag
-to turn off IProtect for a specific virtual host.  If you put this in the 
-global configuration area, you _can_ set it to false by default, and then set 
+to turn off IProtect for a specific virtual host.  If you put this in the
+global configuration area, you _can_ set it to false by default, and then set
 it to true inside the <VirtualHost> directive.
 
 Example:
-
 IProtEnable Off
 
-==IProtExternal (optional)
+==IProtExternalIP (optional)
 
 For advanced use only.  If you like, you can specify an external command to be
-invoked whenever a block happens.  In addition to sending an email, the module
-will call an external shell command.  This will fail if Apache does not have 
-permission to execute the external command, and is potentially a security 
-problem if Apache is running as root.  The IP address is inserted into the 
+invoked whenever a hack attempt block happens.  In addition to sending an email,
+the module will call an external shell command.  This will fail if Apache does
+not have permission to execute the external command, and is potentially a security
+problem if Apache is running as root.  The IP address is inserted into the
 output string if it contains a %s.   This can be used with ipchains (if
 available) to provide low level blocking of abusive IP addresses.
 
-Example: 
+Example:
+IProtExternalIP "echo %s >> /tmp/iprot_log"
+IProtExternalIP "/sbin/ipchains -I input -s %s -j DENY -l"
+IProtExternalIP "/sbin/route add -host %s gw 333.444.555.666"
 
-IProtExternal "echo %s >> /tmp/iprot_log"
-IProtExternal "/sbin/ipchains -I input -s %s -j DENY -l"
-IProtExternal "/sbin/route add -host %s gw 333.444.555.666"
+
+==IProtExternalUser (optional)
+
+For advanced use only.  If you like, you can specify an external command to be
+invoked whenever a username block happens.  In addition to sending an email,
+the module will call an external shell command.  This will fail if Apache does
+not have permission to execute the external command, and is potentially a security
+problem if Apache is running as root.  The Username is inserted into the
+output string if it contains a %s.   This can be used for external logging programs,
+or automated programs to do something with the username when abuse happens, etc.
+
+Example:
+IProtExternalUser "echo %s >> /tmp/iprot_log"
+IProtExternalUser "/some/custom/program %s"
+
+
 
